@@ -3,6 +3,7 @@ Version 4004.0.9: release 2009-
  * Export headerMap from Network.HTTP.Headers
    (suggested by David Leuschner.)
  * Fix Network.TCP.{isTCPConnectedTo,isConnectedTo} to be useful.
+ * For Connection:close transmissions, delay closing until we reach EOF.
 
 Version 4004.0.8: release 2009-08-05
 
